# Langgraph_Architecture

./: .gitignore  Icracode.ipynb  Icracode.py  Steps_To_intialize_uv  docker-compose.yml  graph.ipynb  main.py  pyproject.toml  requirements.txt
data/: knowledge_base.txt
modules/: doc_hash.pkl  evaluator.py  generator.py  grader.py  graph.ipynb  preprocessor.py  retriever.py  retriever_FAISS.py  retriver.py  rewriter.py
modules/vector_store/: index.pkl
vector_store/: index.pkl
